[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/AssetPLayerArratprisel3_2.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/AssetPLayerArrat2.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/AssetPLayerArrat3.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/AssetPLayerArrat1.png" type="Texture" id=5]
[ext_resource path="res://assets/Player/AssetPLayerArratprisel2_2.png" type="Texture" id=6]
[ext_resource path="res://assets/Player/AssetPLayerArrat4.png" type="Texture" id=7]
[ext_resource path="res://assets/Player/AssetPLayerArratprisel1_2.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/Buttons/osb_right.png" type="Texture" id=9]
[ext_resource path="res://assets/GUI/Buttons/osb_jump.png" type="Texture" id=10]
[ext_resource path="res://assets/GUI/Buttons/osb_left.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.7843, 23.7101 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.8385, 19.4203 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "SquatIdle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "posible",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "SquatAction",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=4]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.9, 1.9 )
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 6.6912, 1.42263 )
shape = SubResource( 1 )

[node name="CollisionSit" type="CollisionShape2D" parent="."]
position = Vector2( 6.6742, 5.67307 )
shape = SubResource( 2 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4.41596, 4.19006 )
frames = SubResource( 3 )
animation = "Idle"

[node name="GunPosition" type="Position2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="Right" type="TouchScreenButton" parent="UI"]
position = Vector2( 271.181, 861 )
scale = Vector2( 2, 2 )
normal = ExtResource( 9 )
shape = SubResource( 4 )
action = "ui_right"

[node name="Left" type="TouchScreenButton" parent="UI"]
position = Vector2( 85, 861 )
scale = Vector2( 2, 2 )
normal = ExtResource( 11 )
pressed = ExtResource( 11 )
action = "ui_left"

[node name="Up" type="TouchScreenButton" parent="UI"]
position = Vector2( 1527, 691.578 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
pressed = ExtResource( 10 )
action = "ui_up"

[node name="Acceleration" type="TouchScreenButton" parent="UI"]
position = Vector2( 1670.18, 810 )
scale = Vector2( 2, 2 )
normal = ExtResource( 9 )
action = "ui_acceleration"

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 0.9, 0.5 )
current = true
limit_left = 0
limit_top = 0
limit_bottom = 1080
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 3.0

[node name="RunTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="RecoveryPower" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="RunTimer" to="." method="_on_RunTimer_timeout"]
[connection signal="timeout" from="RecoveryPower" to="." method="_on_RecoveryPower_timeout"]
